<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Detail_Activity">

    <RelativeLayout
        android:id="@+id/id_rela_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/id_tvTitle_AC_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:text="@string/detail_ac_header_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/id_ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/black"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/id_ivMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_more" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/id_ivDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_done" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/id_img_detail"
        android:layout_width="125px"
        android:layout_height="125px"
        android:layout_below="@+id/id_rela_layout" />

    <EditText

        android:id="@+id/id_title_detail_ac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_rela_layout"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_img_detail"
        android:enabled="false"
        android:hint="@string/one_note_demo_tile"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/id_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_title_detail_ac"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_img_detail"
        android:enabled="false"
        android:hint="@string/one_note_demo_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:padding="12dp"
        android:visibility="visible"
        android:id="@+id/rlv_Clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_detail_content"
        android:layout_toRightOf="@+id/id_img_detail">

        <ImageView
            android:id="@+id/id_imgV_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_clock" />

        <EditText
            android:id="@+id/id_detail_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/id_imgV_clock"
            android:enabled="false"
            android:hint="@string/one_note_demo_time"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/id_detail_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_detail_time"
            android:layout_toRightOf="@+id/id_imgV_clock"
            android:enabled="false"
            android:hint="@string/one_note_demo_day"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_detail_update_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_detail_day"
            android:layout_marginTop="20dp"

            android:clickable="false"
            android:gravity="end"
            android:hint="@string/detail_more_update_info"
            android:textColor="@color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlv_CheckTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_detail_content"
        android:layout_toRightOf="@+id/id_img_detail"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rlv_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/id_checktime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/ic_checkbox_uncheck" />

            <EditText
                android:enabled="false"
                android:id="@+id/id_edt_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/id_checktime"
                android:layout_alignBottom="@+id/id_checktime"
                android:layout_toStartOf="@+id/id_checktime"
                android:hint="@string/editText_Time"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlv_edt"
            android:orientation="horizontal"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="@color/white"
                android:visibility="gone"
                android:onClick="openDatePicker"
                android:id="@+id/id_btn_chonngay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_chonngay"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="@color/white"
                android:visibility="gone"
                android:onClick="popTimePicker"
                android:id="@+id/id_btn_chongio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_chongio"
                android:textAllCaps="false" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>